fixing alignment of search button/field

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -12,6 +12,7 @@
 	box-shadow: 1px 1px 4px rgba(0 0 0 0.5);	
 	color: #fff;
 	font-weight: bold;	
+	vertical-align: middle;
 }
 
 .btn:hover,
