--- a/css/forms.css
+++ b/css/forms.css
@@ -9,6 +9,7 @@ form{
 	padding:6px 15px 6px 30px;
 	margin:3px; 
 	background: url('./images/search.png') no-repeat 8px 6px;
+	vertical-align: middle;
 }
 
 .rounded { 
